--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "framer-motion": "^11.11.17",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
     "react-scroll": "^1.9.0",
     "tailwind": "^4.0.0",
     "three": "^0.173.0"
